# docdex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  RESULTS_TASK.md  corpus_gen.py  results.json  results_task.json  run_benchmark.py  task_benchmark.py
docs/: V0.2_PLAN.md
src/docdex/: __init__.py  __main__.py  cli.py  config.py  context.py  dedup.py  doctor.py  dumps.py  extract.py  index_db.py  inventory.py  migrate.py  prefetch.py  scaffold.py  search.py  semantic.py  sync.py  tokens.py  vision.py  walk.py
tests/: conftest.py  test_cache_layout.py  test_config_walk.py  test_context.py  test_dumps_doctor.py  test_extract.py  test_index_db.py  test_migrate.py  test_new_layout.py  test_password_extract.py  test_phase1_fixes.py  test_phase2_context.py  test_phase3_fixes.py  test_scaffold_cli.py  test_search_semantic.py  test_security.py  test_semantic_safety.py  test_sync.py  test_task_benchmark.py  test_vision.py
